--- a/templates/leftMenu.html
+++ b/templates/leftMenu.html
@@ -37,6 +37,21 @@
 			<li class="drawer-dropdown" id="menu_li_wordMenu">
 				<a class="drawer-menu-item" data-target="#" href="javascript:void(0);" data-toggle="dropdown"
 					role="button" aria-expanded="false" id="wordMenu">
+					<span class="wordMenuIcon1"></span><label class="menu-label">YA</label>
+					<span class="drawer-caret"></span>
+				</a>
+				<ul class="drawer-dropdown-menu" style="display:none;">
+					<li class="admintype5"><a class="drawer-dropdown-menu-item" href="javascript:void(0);"
+							id="YAWordRegist">単語登録</a>
+					</li>
+					<li><a class="drawer-dropdown-menu-item" href="javascript:void(0);" id="YAWordList">単語一覧</a></li>
+				</ul>
+			</li>
+		</ul>
+		<ul>
+			<li class="drawer-dropdown" id="menu_li_wordMenu">
+				<a class="drawer-menu-item" data-target="#" href="javascript:void(0);" data-toggle="dropdown"
+					role="button" aria-expanded="false" id="wordMenu">
 					<span class="wordMenuIcon1"></span><label class="menu-label">YNS</label>
 					<span class="drawer-caret"></span>
 				</a>
