--- a/templates/yaWordRegist.html
+++ b/templates/yaWordRegist.html
@@ -111,7 +111,7 @@
 					<input type="text" id="word_id" name="word_id" value="{$form->word_id}">
 					<input type="hidden" id="audio_data" name="audio_data" value="" />
 					<input type="hidden" id="screen_mode" name="screen_mode" value="{$form->screen_mode}" />
-                    <input type="text" value="{$form->word_book_name}" />
+					<input type="text" value="{$form->word_book_name}">
 					<div width="100%">
 						<table width="100%">
 							<tr>
