--- a/templates/yaWordRegist.html
+++ b/templates/yaWordRegist.html
@@ -1,84 +1,85 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>単語登録</title>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<meta name="robots" content="noindex, nofollow">
-<meta name="googlebot" content="noindex, nofollow">
-{literal}
-<script type="text/javascript" src="{/literal}{$smarty.const.HOME_DIR}{literal}js/jquery.min.js"></script>
-<script type="text/javascript" src="{/literal}{$smarty.const.HOME_DIR}{literal}js/jquery-ui.js"></script>
-<script type="text/javascript" src="{/literal}{$smarty.const.HOME_DIR}{literal}js/common.js"></script>
-<script type="text/javascript" src="{/literal}{$smarty.const.HOME_DIR}{literal}js/moment.js"></script>
-<script type="text/javascript" src="{/literal}{$smarty.const.HOME_DIR}{literal}js/nicEdit-latest.js"></script>
-{/literal}
-<link href="{$smarty.const.HOME_DIR}css/jquery-ui.css" rel="stylesheet">
-<link href="{$smarty.const.HOME_DIR}css/default.css" rel="stylesheet">
-<link href="{$smarty.const.HOME_DIR}css/style.css" rel="stylesheet">
-<script type="text/javascript">
 
-			// エンターキー押下時のsubmitを無効化
-			$(document).on("keypress", "input:not(.allow_submit)", function(event) {
-				return event.which !== 13;
+<head>
+	<title>単語登録</title>
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+	<meta name="robots" content="noindex, nofollow">
+	<meta name="googlebot" content="noindex, nofollow">
+	{literal}
+	<script type="text/javascript" src="{/literal}{$smarty.const.HOME_DIR}{literal}js/jquery.min.js"></script>
+	<script type="text/javascript" src="{/literal}{$smarty.const.HOME_DIR}{literal}js/jquery-ui.js"></script>
+	<script type="text/javascript" src="{/literal}{$smarty.const.HOME_DIR}{literal}js/common.js"></script>
+	<script type="text/javascript" src="{/literal}{$smarty.const.HOME_DIR}{literal}js/moment.js"></script>
+	<script type="text/javascript" src="{/literal}{$smarty.const.HOME_DIR}{literal}js/nicEdit-latest.js"></script>
+	{/literal}
+	<link href="{$smarty.const.HOME_DIR}css/jquery-ui.css" rel="stylesheet">
+	<link href="{$smarty.const.HOME_DIR}css/default.css" rel="stylesheet">
+	<link href="{$smarty.const.HOME_DIR}css/style.css" rel="stylesheet">
+	<script type="text/javascript">
+
+		// エンターキー押下時のsubmitを無効化
+		$(document).on("keypress", "input:not(.allow_submit)", function (event) {
+			return event.which !== 13;
+		});
+		// エンターキー押下時のsubmitを無効化
+		$(document).on("keypress", "select:not(.allow_submit)", function (event) {
+			return event.which !== 13;
+		});
+		//表示再現
+		$(document).ready(function () {
+			// MSGのあるなし
+			if ($(".error_msg").html() != "") {
+				$(".error_section").slideDown('slow')
+			}
+			$(".close_icon").on('click', function () {
+				$(".error_section").slideUp('slow')
 			});
-			// エンターキー押下時のsubmitを無効化
-			$(document).on("keypress", "select:not(.allow_submit)", function(event) {
-				return event.which !== 13;
-			});
-			//表示再現
-			$(document).ready(function() {
-				// MSGのあるなし
-				if ( $(".error_msg").html() != "" ){
-					$(".error_section").slideDown('slow')
-				}
-				$(".close_icon").on('click', function(){
-					$(".error_section").slideUp('slow')
-				});
-				var input_audio_file = document.getElementById("input_audio_file");
-			    var audio_data = "";
-				// ------------------------------------------------------------
-				// Base64化する
-				// ------------------------------------------------------------
-				File.prototype.convertToBase64 = function(callback){
-					var reader = new FileReader();
-					reader.onload = function(e) {
-						callback(e.target.result)
-					};
-					reader.onerror = function(e) {
-						callback(null);
-					};
-					reader.readAsDataURL(this);
+			var input_audio_file = document.getElementById("input_audio_file");
+			var audio_data = "";
+			// ------------------------------------------------------------
+			// Base64化する
+			// ------------------------------------------------------------
+			File.prototype.convertToBase64 = function (callback) {
+				var reader = new FileReader();
+				reader.onload = function (e) {
+					callback(e.target.result)
 				};
-					/**
-					*
-					*  登録ボタン押下、必須チェック処理
-					*
-					**/
-					$("#btn_insert").on('click', function(){
-					$(".error_section").hide();
-				    var word_book_name = $('#word_book_name').val();
-				    var word_lang_type =  $('#word_lang_type').val();
-	                  if ( word_book_name == "" ) {
-						   $('#err_dis').show();
-	                       $(".error_section").slideToggle('slow');
-		                   $(".error_msg").html("単語名を入力してください。");
-		                    $(".divBody").scrollTop(0);
-	                        return false;
-	                    }
-					  if ( word_lang_type == "" ) {
-						$('#err_dis').show();
-						$(".error_section").slideToggle('slow');
-						$(".error_msg").html("単語言語を入力してください。");
-						$(".divBody").scrollTop(0);
-						return false;
-					}
-					});
+				reader.onerror = function (e) {
+					callback(null);
+				};
+				reader.readAsDataURL(this);
+			};
+			/**
+			*
+			*  登録ボタン押下、必須チェック処理
+			*
+			**/
+			$("#btn_insert").on('click', function () {
+				$(".error_section").hide();
+				var word_book_name = $('#word_book_name').val();
+				var word_lang_type = $('#word_lang_type').val();
+				if (word_book_name == "") {
+					$('#err_dis').show();
+					$(".error_section").slideToggle('slow');
+					$(".error_msg").html("単語名を入力してください。");
+					$(".divBody").scrollTop(0);
+					return false;
+				}
+				if (word_lang_type == "") {
+					$('#err_dis').show();
+					$(".error_section").slideToggle('slow');
+					$(".error_msg").html("単語言語を入力してください。");
+					$(".divBody").scrollTop(0);
+					return false;
+				}
 			});
-		</script>
+		});
+	</script>
 </head>
+
 <body class="pushmenu-push">
-	<form id="main_form" name="main_form1"
-		action="{$smarty.const.HOME_DIR}YAWordRegist/Save" method="post">
+	<form id="main_form" name="main_form1" action="{$smarty.const.HOME_DIR}YAWordRegist/Save" method="post">
 		{include file='leftMenu.html'}
 		<div class="divHeader">
 			<!--header-->
@@ -88,9 +89,9 @@
 		<div class="divBody">
 			<div class="main">
 				<section class="error_section">
-					<img src="{$smarty.const.HOME_DIR}image/close_icon.png"
-						style="width: 15px; float: right" class="close_icon">
-						{if !empty($error_msg)}
+					<img src="{$smarty.const.HOME_DIR}image/close_icon.png" style="width: 15px; float: right"
+						class="close_icon">
+					{if !empty($error_msg)}
 					<div class="error_msg">{$error_msg}</div>
 					{else if !empty($info_msg)}
 					<div class="error_msg">{$info_msg}</div>
@@ -117,19 +118,18 @@
 							<tr>
 								<td style="width: 240px;">単語名<span class="required">※</span></td>
 								<td><input type="text" class="text" id="word_book_name" name="word_book_name"
-									value="{$form->word_book_name}" maxlength="512" size="30">
+										value="{$form->word_book_name}" maxlength="512" size="30">
 								</td>
 							</tr>
 							<tr>
 								<td></td>
 							</tr>
 							<tr>
-								<td style="width: 240px;"><label>単語言語</label><span
-									class="required">※</span>
+								<td style="width: 240px;"><label>単語言語</label><span class="required">※</span>
 								</td>
-								<td><select name="word_lang_type" id="word_lang_type"
-									style="width: 189px;" value="{$form->word_lang_type}">
-									{if !empty($word_category)} {if {($form->word_lang_type)}==""}
+								<td><select name="word_lang_type" id="word_lang_type" style="width: 189px;"
+										value="{$form->word_lang_type}">
+										{if !empty($word_category)} {if {($form->word_lang_type)}==""}
 										<option value="" 　selected>選択してください。</option>
 										{foreach $word_category as $word}
 										<option value={$word->type}> {$word->name}</option>
@@ -137,10 +137,10 @@
 										<option value="">選択してください。</option>
 										{foreach $word_category as $word}
 										<option value={$word->type}
-										{if
-										   {($form->word_lang_type)}== {$word->type}} selected {/if} >
-										  {$word->name}</option> {/foreach} {/if} {/if}
-								     </select>
+											{if
+											{($form->word_lang_type)}== {$word->type}} selected {/if} >
+											{$word->name}</option> {/foreach} {/if} {/if}
+									</select>
 								</td>
 							</tr>
 							<tr>
@@ -158,15 +158,13 @@
 								<td colspan="2"></td>
 								<td width="100px;"></td>
 								<td width="400px;"></td> {if $form->screen_mode eq 'update'}
-								<input id="btn_del" type="button" name="btn_del"
-									class="btn_delete"
+								<input id="btn_del" type="button" name="btn_del" class="btn_delete"
 									onclick="checkDelete('{$form->id}','{$smarty.const.HOME_DIR}YAWordRegist/delete');"
 									style="text-align: left;"> {/if}
 							</tr>
 							<tr>
-								<input type="submit" name="submit_add" id="btn_insert"
-									name="btn_insert" value="" class="btn_insert"
-									style="padding-right: 20px; float: right;">
+								<input type="submit" name="submit_add" id="btn_insert" name="btn_insert" value=""
+									class="btn_insert" style="padding-right: 20px; float: right;">
 							</tr>
 						</table>
 					</div>
@@ -186,4 +184,5 @@
 	{include file='footer.html'}
 	<!--footer-->
 </body>
+
 </html>
