Adding YMH in list

--- a/templates/ymhWordList.html
+++ b/templates/ymhWordList.html
@@ -123,7 +123,7 @@
             {/if}
           </section>
           <section class="content">
-            <p>>> <span class="title"> 単語一覧</span></p>
+            <p>>> <span class="title">YMH単語一覧</span></p>
             <br />
             <!-- <div class="divideCol"> -->
             <!-- <input class="text" type="text" name="search_word" id="search_word" maxlength="512" size="30" />
