--- a/templates/leftMenu.html
+++ b/templates/leftMenu.html
@@ -44,6 +44,9 @@
 					<li class="admintype5"><a class="drawer-dropdown-menu-item" href="javascript:void(0);"
 							id="YAWordRegist">単語登録</a>
 					</li>
+					<li class="admintype5"><a class="drawer-dropdown-menu-item" href="javascript:void(0);"
+							id="YAWordList">単語一覧</a>
+					</li>
 				</ul>
 			</li>
 		</ul>
