--- a/templates/yaWordList.html
+++ b/templates/yaWordList.html
@@ -50,11 +50,11 @@
         searching: true,
         columns: [
           { searchable: true },
-          { searchable: true },
-          { searchable: true },
           { searchable: false },
           { searchable: false },
-          { searchable: false },
+          // { searchable: false },
+          // { searchable: false },
+          // { searchable: false },
         ],
         language: {
           info: " _TOTAL_ 件中 _START_ から _END_ まで表示",
@@ -148,7 +148,7 @@
                   <td width="100px;">en</td>
                   {else}
                   <td width="100px;">ja</td>
-                  {/if} 
+                  {/if}
                   <td width="50px;">
                     <input type="button" class="btn_edit1" name="edit" title="編集"
                       onclick="trans('{$result->id}','{$smarty.const.HOME_DIR}YAWordRegist/index')" />
@@ -209,21 +209,7 @@
       $("#menuStatus").val(menuStatus);
       $("#main_form").submit();
     }
-    //text to speech using php by STTO
-    function trans1(word_book_name, action) {
-      var menuOpen = document.getElementById("menuOpen").value;
-      var menuStatus = document.getElementById("menuStatus").value;
-      $("#search_word").val($("#word").val());
-      $("#search_translation").val($("#translation").val());
-      setDataTableData();
-      $("#main_form").attr("action", action);
-      $("#screen_mode").val("update");
-      $("#word_book_name").val(word_book_name);
-      $("#menuOpen").val(menuOpen);
-      $("#menuStatus").val(menuStatus);
-      $("#main_form").submit();
-    }
-    // 登録ボタン処理
+
     function doInsert(action) {
       setDataTableData();
       var menuOpen = document.getElementById("menuOpen").value;
@@ -238,28 +224,7 @@
       $("#main_form").submit();
     }
 
-    //発音再生
-    function playWordSound(word, type) {
-      // 発言を作成
-      const uttr = new SpeechSynthesisUtterance(word);
-      // 言語 (日本語:ja-JP, アメリカ英語:en-US, イギリス英語:en-GB, 中国語:zh-CN, 韓国語:ko-KR)
-      var type_name = "en-US";
-      var voice_name = "Google US English";
-      if (type == "002") {
-        type_name = "ja-JP";
-        voice_name = "Google 日本語";
-      }
-      uttr.lang = "en-US";
-      console.log(type_name);
 
-      // 選択された声を指定
-      uttr.voice = speechSynthesis
-        .getVoices()
-        .filter((voice) => voice.name == voice_name)[0];
-
-      // 発言を再生 (発言キュー発言に追加)
-      speechSynthesis.speak(uttr);
-    }
     //削除 ボタン押下処理
     function checkDelete(id, action) {
       alertDialog = confirm("Are you sure to delete this word?");
