fix design icon

--- a/templates/yaWordRegist.html
+++ b/templates/yaWordRegist.html
@@ -232,7 +232,7 @@
                     id="btn_insert"
                     name="btn_insert"
                     value=""
-                    class="btn_insert"
+                    class="btn_insert_a"
                     style="padding-right: 20px; float: right"
                   />
                 </tr>
