--- a/css/default.css
+++ b/css/default.css
@@ -1302,6 +1302,17 @@ thead {
     height: 35px;
     border: 0;
 }
+
+.btn_insert_a {
+    background: url(../image/success.png);
+    background-color: none;
+    background-size: 40px 40px;
+    background-repeat: no-repeat;
+    width: 40px;
+    height: 40px;
+    border: 0;
+}
+
 .btn_insert1 {
     background: url(../image/save.png);
     background-color: none;
@@ -1312,7 +1323,7 @@ thead {
     border: 0;
 }
 .btn_back {
-    background: url(../image/back.svg);
+    background: url(../image/back_a.png);
     background-color: none;
     background-size: 35px 35px;
     background-repeat: no-repeat;
