--- a/templates/leftMenu.html
+++ b/templates/leftMenu.html
@@ -37,7 +37,7 @@
 			<li class="drawer-dropdown" id="menu_li_yaWordMenu">
 				<a class="drawer-menu-item" data-target="#" href="javascript:void(0);" data-toggle="dropdown"
 					role="button" aria-expanded="false" id="yaWordMenu">
-					<span class="wordMenuIcon1"></span><label class="menu-label">YA</label>
+					<span class="yaWordMenuIcon"></span><label class="menu-label">YA</label>
 					<span class="drawer-caret"></span>
 				</a>
 				<ul class="drawer-dropdown-menu" style="display:none;">
