--- a/css/default.css
+++ b/css/default.css
@@ -1332,7 +1332,7 @@ thead {
     border: 0;
 }
 .btn_back {
-    background: url(../image/back_a.png);
+    background: url(../image/backIcon.png);
     background-color: none;
     background-size: 35px 35px;
     background-repeat: no-repeat;
