--- a/templates/leftMenu.html
+++ b/templates/leftMenu.html
@@ -50,6 +50,24 @@
 				</ul>
 			</li>
 		</ul>
+
+		<ul>
+			<li class="drawer-dropdown" id="menu_li_yaWordMenu">
+				<a class="drawer-menu-item" data-target="#" href="javascript:void(0);" data-toggle="dropdown"
+					role="button" aria-expanded="false" id="yaWordMenu">
+					<span class="yaWordMenuIcon"></span><label class="menu-label">AY</label>
+					<span class="drawer-caret"></span>
+				</a>
+				<ul class="drawer-dropdown-menu" style="display:none;">
+					<li class="admintype5"><a class="drawer-dropdown-menu-item" href="javascript:void(0);"
+							id="AYWordRegist">単語登録</a>
+					</li>
+					<li class="admintype5"><a class="drawer-dropdown-menu-item" href="javascript:void(0);"
+							id="YAWordList">単語一覧</a>
+					</li>
+				</ul>
+			</li>
+		</ul>
 		<ul>
 			<li class="drawer-dropdown" id="menu_li_wordMenu">
 				<a class="drawer-menu-item" data-target="#" href="javascript:void(0);" data-toggle="dropdown"
