--- a/templates/ayWordRegist.html
+++ b/templates/ayWordRegist.html
@@ -101,7 +101,7 @@
                 <section class="content">
                     <p>>> <span class="title">AY / 単語登録</span></p>
                     <p style="text-align: right; width: 100%">
-                        <input type="button" title="戻る" value="" class="btn_back"
+                        <input type="button" title="戻る" value="" class="btn_back2"
                             onclick="javascript:doBack('{$smarty.const.HOME_DIR}AYWordRegist/back')" />
                     </p>
                     <input type="hidden" id="msg" name="msg" value="{$msg}" />
@@ -169,7 +169,7 @@
                             </tr>
                             <tr>
                                 <input type="submit" name="submit_add" id="btn_insert" name="btn_insert" value=""
-                                    class="btn_insert_a" style="padding-right: 20px; float: right" />
+                                    class="btn_insert2" style="padding-right: 20px; float: right" />
                             </tr>
                         </table>
                     </div>
