--- a/templates/leftMenu.html
+++ b/templates/leftMenu.html
@@ -52,10 +52,10 @@
 		</ul>
 
 		<ul>
-			<li class="drawer-dropdown" id="menu_li_yaWordMenu">
+			<li class="drawer-dropdown" id="menu_li_ayWordMenu">
 				<a class="drawer-menu-item" data-target="#" href="javascript:void(0);" data-toggle="dropdown"
-					role="button" aria-expanded="false" id="yaWordMenu">
-					<span class="yaWordMenuIcon"></span><label class="menu-label">AY</label>
+					role="button" aria-expanded="false" id="ayWordMenu">
+					<span class="ayWordMenuIcon"></span><label class="menu-label">AY</label>
 					<span class="drawer-caret"></span>
 				</a>
 				<ul class="drawer-dropdown-menu" style="display:none;">
