Update , Remove Delete Icon and YaWordRegit Update Form

--- a/templates/ayWordList.html
+++ b/templates/ayWordList.html
@@ -151,7 +151,7 @@
                   {/if}
                   <td width="50px;">
                     <input type="button" class="btn_edit2" name="edit" title="編集"
-                      onclick="trans('{$result->id}','{$smarty.const.HOME_DIR}YAWordRegist/index')" />
+                      onclick="trans('{$result->id}','{$smarty.const.HOME_DIR}AYWordRegist/index')" />
 
                     <input type="button" class="btn_delete2" id="btn_del" name="edit" title="削除"
                       onclick="checkDelete('{$result->id}','{$smarty.const.HOME_DIR}AYWordRegist/delete')" />
