--- a/templates/ayWordRegist.html
+++ b/templates/ayWordRegist.html
@@ -162,9 +162,9 @@
                                 <td width="100px;"></td>
                                 <td width="400px;"></td>
                                 {if $form->screen_mode eq 'update'}
-                                <input id="btn_del" type="button" name="btn_del" class="btn_delete"
+                                <!-- <input id="btn_del" type="button" name="btn_del" class="btn_delete"
                                     onclick="checkDelete('{$form->id}','{$smarty.const.HOME_DIR}AYWordRegist/delete');"
-                                    style="text-align: left" />
+                                    style="text-align: left" /> -->
                                 {/if}
                             </tr>
                             <tr>
